# rustVX

./: .gitignore  .gitmodules  API_IMPLEMENTATION_REVIEW.md  CI_DEBUG.md  CLONE_STRATEGY_SUMMARY.md  CONFORMANCE.md  CONFORMANCE_FIX_PLAN.md  CONFORMANCE_MASTER_PLAN.md  CONFORMANCE_PHASE2_PLAN.md  CONFORMANCE_PLAN.md  CONFORMANCE_PLAN_R7.md  CONFORMANCE_REPORT.md  CORE_FRAMEWORK_FIX_PLAN.md  CRITICAL_FUNCTIONS.md  CTS_ANALYSIS.md  CTS_ANALYSIS_PLAN.md  CTS_CONFORMANCE_ANALYSIS.md  CTS_REBUILD_SUMMARY.md  CTS_TEST_GROUPS_PLAN.md  CTS_TEST_RESULTS.md  Cargo.toml  EXPORT_FIX_REPORT.md  FINAL_REFCOUNT_FIX.md  FULL_CONFORMANCE_PLAN.md  FUNCTION_VERIFICATION_REPORT.md  GROUP1_FIX_PLAN.md  HIGH_IMPACT_PLAN.md  IMAGE_CLONE_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  ITERATION_2_PLAN.md  KHRONOS_SAMPLES_ANALYSIS.md  KHRONOS_SAMPLES_SUMMARY.md  LICENSE  OPENVX_1_3_1_CONFORMANCE_PLAN.md  PERF_RESULTS.md  PHASE2_CONFORMANCE_REPORT.md  PHASE2_GEOMETRIC_PLAN.md  PHASE2_SIMD_SUMMARY.md  PHASE3_CONVOLUTION_PLAN.md  README.md  (+26 more)
.github/scripts/: perf_gate.py
.github/workflows/: apisec-scan.yml  benchmark.yml  ci.yml  conformance.yml  openvx-conformance.yml
docs/: multicore_pipeline_design.md  openvx-1.3.1-coverage-plan.md  pipelining_architecture.md
openvx-buffer/: Cargo.toml
openvx-buffer/src/: c_api.rs  lib.rs  user_data_object.rs
openvx-core/: Cargo.toml
openvx-core/src/: c_api.rs  c_api_data.rs  context.rs  kernel_fast_paths.rs  lib.rs  pipelining.rs  pipelining_api.rs  pipelining_executor.rs  reference.rs  simd_kernels.rs  thread_pool.rs  types.rs  unified_c_api.rs  unified_c_api_final.rs  vxu_impl.rs
openvx-ffi/: Cargo.toml
openvx-ffi/src/: lib.rs
openvx-ffi/tests/: user_data_object.rs  vx_api_p2.rs
openvx-image/: Cargo.toml
openvx-image/examples/: test_nv12.rs
openvx-image/src/: c_api.rs  ct_image.rs  lib.rs
openvx-vision/: Cargo.toml
openvx-vision/benches/: quick_bench.rs  vision_kernels.rs
openvx-vision/src/: aarch64_simd.rs  arithmetic.rs  arithmetic_simd.rs  color.rs  color_simd.rs  features.rs  filter.rs  filter_simd.rs  geometric.rs  gradient.rs  kernel_enums.rs  lib.rs  morphology.rs  object_detection.rs  optical_flow.rs  parallel.rs  register.rs  simd_utils.rs  statistics.rs  utils.rs  x86_64_simd.rs
openvx-vision/tests/: arithmetic_tests.rs  color_tests.rs  feature_tests.rs  filter_tests.rs  geometric_tests.rs  gradient_tests.rs  morphology_tests.rs  object_detection_tests.rs  statistics_tests.rs
ref/: STEP6_PLAN.md  ago_haf_cpu_canny.cpp
samples/: README.md
samples/pipelining_multicore/: Makefile  README.md  benchmark_pipelining  benchmark_pipelining.c  multiscale_feature_extraction  multiscale_feature_extraction.c  pipelining_multicore.c  pipelining_vs_nonpipelining.c
test_conformance_patches/: reduce-loop-count.patch
