[package]
name = "openvx-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
petgraph = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }

[features]
default = []
c-api = []
