[package]
name = "openvx-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
openvx-core = { path = "../openvx-core" }
openvx-vision = { path = "../openvx-vision" }
openvx-buffer = { path = "../openvx-buffer" }
openvx-image = { path = "../openvx-image" }
